# livraria_django

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: models.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
livraria/: settings.py  urls.py
