[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Quinhones <matheus-quinhones@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
